--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,18 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:postgrespassword@postgres:5435/postgres?schema=public"
+
+# Node Environment
+NODE_ENV=development
+
+# PgAdmin Configuration
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=pgadminpassword
+PGADMIN_LISTEN_PORT=5050
+
+# PostgreSQL Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgrespassword
+POSTGRES_DB=postgres
+POSTGRES_PORT=5435
