--- a/package.json
+++ b/package.json
@@ -24,21 +24,45 @@
     "db:fresh": "prisma db push --force-reset && prisma db push && prisma db seed"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "@nestjs/common": "^10.4.7",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^8.0.5",
+    "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.1",
+    "multer": "1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@nestjs/cli": "^10.4.7",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.6",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "prisma": "^5.22.0",
