--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 DATABASE_URL="postgresql://postgres:postgrespassword@postgres:5435/postgres?schema=public"
 
 # Node Environment
-NODE_ENV=development
+NODE_ENV=production
 
 # PgAdmin Configuration
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
