--- a/package.json
+++ b/package.json
@@ -35,19 +35,24 @@
     "@nestjs/swagger": "^8.0.5",
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^5.22.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/sharp": "^0.32.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.1",
+    "fluent-ffmpeg": "^2.1.3",
     "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
