--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:postgrespassword@postgres:5435/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:postgrespassword@localhost:5435/postgres?schema=public"
+
+APP_URL=http://localhost:4000
 
 # Node Environment
-NODE_ENV=production
+NODE_ENV=development # production
 
 # PgAdmin Configuration
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
@@ -19,3 +21,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgrespassword
 POSTGRES_DB=postgres
 POSTGRES_PORT=5435
+
+JWT_SECRET=secret
+JWT_REFRESH_TOKEN_KEY=refreshTokenKey
